Crear proyecto jison

--- a/jison/package.json
+++ b/jison/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://eldersol.github.io/jison",
+  "homepages":"https://eldersol.github.io/jison",
   "name": "prueba_jison",
   "version": "0.1.0",
   "private": true,
